# flowbridge

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml
docs/: 技术设计文档.md  技术预研文档.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  svc.yaml
src/api/: auth.py  execution.py  webhook.py  workflow.py
src/conf/: __init__.py
src/dao/orm/model/: __init__.py
src/plugins/: base.py
src/plugins/action/: __init__.py  feishu_notify.py  http_request.py  wecom_notify.py
src/plugins/trigger/: __init__.py  cron_trigger.py  feishu_approval.py  feishu_bitable.py
src/schema/: __init__.py
src/service/: alerting.py  cache.py  executor.py  logging_config.py  plugin_manager.py  scheduler.py  template.py
tests/: test_plugin_manager.py  test_template.py
